# seminar-2022-newline-model

./: .gitignore  README.md  create_dataset.ipynb  demo.py  outputs.py  pyproject.toml  train.ipynb  train_pl.ipynb
