[tool.poetry]
name = "seminar-2022-newline-model"
version = "0.1.0"
description = ""
authors = ["kathmandu777 <mahhakatomanato@gmail.com>"]
readme = "README.md"
packages = [{include = "seminar_2022_newline_model"}]

[tool.poetry.dependencies]
python = "3.10.5"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
